// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInputs /> shapshots should render with empty text 1`] = `
<div
  className="inputsPill"
>
  <div
    className="dropdownPill"
  >
    <select
      className="dropdown"
      onChange={[Function]}
      value={1}
    >
      <option
        value="1"
      >
        Zone 1
      </option>
      <option
        value="2"
      >
        Zone 2
      </option>
      <option
        value="3"
      >
        Zone 3
      </option>
    </select>
    <span
      className="dropdownArrow"
    >
      <i
        className="mdi mdi-chevron-down"
      />
    </span>
  </div>
  <div
    className="searchInputContainer"
  >
    <input
      autoFocus={true}
      className="searchInput"
      onChange={[Function]}
      value=""
    />
    <div
      className="emptyText"
    >
      Enter query
    </div>
  </div>
</div>
`;

exports[`<SearchInputs /> shapshots should render with the selected category 1`] = `
<div
  className="inputsPill"
>
  <div
    className="dropdownPill"
  >
    <select
      className="dropdown"
      onChange={[Function]}
      value={3}
    >
      <option
        value="1"
      >
        Zone 1
      </option>
      <option
        value="2"
      >
        Zone 2
      </option>
      <option
        value="3"
      >
        Zone 3
      </option>
    </select>
    <span
      className="dropdownArrow"
    >
      <i
        className="mdi mdi-chevron-down"
      />
    </span>
  </div>
  <div
    className="searchInputContainer"
  >
    <input
      autoFocus={true}
      className="searchInput"
      onChange={[Function]}
      value=""
    />
    <div
      className="emptyText"
    >
      Enter query
    </div>
  </div>
</div>
`;

exports[`<SearchInputs /> shapshots should render without empty text but with the query 1`] = `
<div
  className="inputsPill"
>
  <div
    className="dropdownPill"
  >
    <select
      className="dropdown"
      onChange={[Function]}
      value={1}
    >
      <option
        value="1"
      >
        Zone 1
      </option>
      <option
        value="2"
      >
        Zone 2
      </option>
      <option
        value="3"
      >
        Zone 3
      </option>
    </select>
    <span
      className="dropdownArrow"
    >
      <i
        className="mdi mdi-chevron-down"
      />
    </span>
  </div>
  <div
    className="searchInputContainer"
  >
    <input
      autoFocus={true}
      className="searchInput"
      onChange={[Function]}
      value="My Query"
    />
  </div>
</div>
`;
